...
                  width: 180,
                  height: 180,
                  child: CircularProgressIndicator(value: .72, strokeWidth: 14),
                ),
                const SizedBox(height: 28),
                Text(
                  '25:00',
                  style: Theme.of(context)
                      .textTheme
                      .displayMedium
                      ?.copyWith(fontWeight: FontWeight.w700),
                ),
                const SizedBox(height: 12),
...
